fix: overflow for table

--- a/src/containers/StorageGroupPage/StorageGroupPage.scss
+++ b/src/containers/StorageGroupPage/StorageGroupPage.scss
@@ -4,6 +4,7 @@
     position: relative;
 
     display: flex;
+    overflow: auto;
     flex-direction: column;
     gap: 20px;
 
